{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 77,
  "lineage": "ebe200f1-65dc-9158-946e-7505243e06e2",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_docker_registry",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-17T07:05:36.504-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/my-project-butkem/global/firewalls/allow-docker-registry",
            "log_config": [],
            "name": "allow-docker-registry",
            "network": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/global/networks/default",
            "priority": 1000,
            "project": "my-project-butkem",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/global/firewalls/allow-docker-registry",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-docker"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-17T06:57:06.793-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/my-project-butkem/global/firewalls/allow-http-https",
            "log_config": [],
            "name": "allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/global/networks/default",
            "priority": 1000,
            "project": "my-project-butkem",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/global/firewalls/allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-17T06:57:06.734-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/my-project-butkem/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/global/networks/default",
            "priority": 1000,
            "project": "my-project-butkem",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "appserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240830",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/zones/asia-southeast2-a/disks/appserver"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/my-project-butkem/zones/asia-southeast2-a/instances/appserver",
            "instance_id": "5556294182000961882",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "imron:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCJzji2yZfXI/Ejqj0LElzTlKYeRMY7eSVzOyEIAZoUG5RaKckPMZhMEAOCzsNNprXzXDdVUt+PJDToUplpMwtWJvwNmAIRgCdbayiZsXyxt3EfL7R6n0fBBnVtFsJjJIzB+dseul6x8ynq3cduy0pAb8Gj2zqMIlyEv6kqP95f/d/h//oyr/4oIgeXphWc7x7L42znrFdv7XS+wjmulFP/Omf1YGqNk+M3n+Pgop3AZgyieRb45iCObeuONtNr5hHlCdPflIXOtc7hbogx597GBostZaHHxxBPw7O+SUd5XLpKhwj4fStCmNhAZsst/zccSROGUkjeoF5q/hJb2TMNxRDFhbNfihxLH6zB6UtO3PNDcuw7mAw3tL3A6tdpNYJYgbvy4QKcSmZCMIS6ks34sJjdkKZpcociJCV35BZLX3J [...]
            },
            "metadata_fingerprint": "dptBASr5J0U=",
            "name": "appserver",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.101.35.102",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/global/networks/default",
                "network_ip": "10.184.0.20",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/regions/asia-southeast2/subnetworks/default",
                "subnetwork_project": "my-project-butkem"
              }
            ],
            "project": "my-project-butkem",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/zones/asia-southeast2-a/instances/appserver",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-all"
            ],
            "tags_fingerprint": "DYx7eH_2KNQ=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "docker_registry",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240830",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/zones/asia-southeast2-a/disks/docker-registry"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/my-project-butkem/zones/asia-southeast2-a/instances/docker-registry",
            "instance_id": "6430641487859197789",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "imron:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCJzji2yZfXI/Ejqj0LElzTlKYeRMY7eSVzOyEIAZoUG5RaKckPMZhMEAOCzsNNprXzXDdVUt+PJDToUplpMwtWJvwNmAIRgCdbayiZsXyxt3EfL7R6n0fBBnVtFsJjJIzB+dseul6x8ynq3cduy0pAb8Gj2zqMIlyEv6kqP95f/d/h//oyr/4oIgeXphWc7x7L42znrFdv7XS+wjmulFP/Omf1YGqNk+M3n+Pgop3AZgyieRb45iCObeuONtNr5hHlCdPflIXOtc7hbogx597GBostZaHHxxBPw7O+SUd5XLpKhwj4fStCmNhAZsst/zccSROGUkjeoF5q/hJb2TMNxRDFhbNfihxLH6zB6UtO3PNDcuw7mAw3tL3A6tdpNYJYgbvy4QKcSmZCMIS6ks34sJjdkKZpcociJCV35BZLX3J [...]
            },
            "metadata_fingerprint": "dptBASr5J0U=",
            "name": "docker-registry",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.101.90.66",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/global/networks/default",
                "network_ip": "10.184.0.23",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/regions/asia-southeast2/subnetworks/default",
                "subnetwork_project": "my-project-butkem"
              }
            ],
            "project": "my-project-butkem",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/zones/asia-southeast2-a/instances/docker-registry",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-docker"
            ],
            "tags_fingerprint": "O59XufsaUIw=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240830",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/zones/asia-southeast1-b/disks/gateway"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/my-project-butkem/zones/asia-southeast1-b/instances/gateway",
            "instance_id": "5196355478551832922",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "imron:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCJzji2yZfXI/Ejqj0LElzTlKYeRMY7eSVzOyEIAZoUG5RaKckPMZhMEAOCzsNNprXzXDdVUt+PJDToUplpMwtWJvwNmAIRgCdbayiZsXyxt3EfL7R6n0fBBnVtFsJjJIzB+dseul6x8ynq3cduy0pAb8Gj2zqMIlyEv6kqP95f/d/h//oyr/4oIgeXphWc7x7L42znrFdv7XS+wjmulFP/Omf1YGqNk+M3n+Pgop3AZgyieRb45iCObeuONtNr5hHlCdPflIXOtc7hbogx597GBostZaHHxxBPw7O+SUd5XLpKhwj4fStCmNhAZsst/zccSROGUkjeoF5q/hJb2TMNxRDFhbNfihxLH6zB6UtO3PNDcuw7mAw3tL3A6tdpNYJYgbvy4QKcSmZCMIS6ks34sJjdkKZpcociJCV35BZLX3J [...]
            },
            "metadata_fingerprint": "dptBASr5J0U=",
            "name": "gateway",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.247.181.164",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/global/networks/default",
                "network_ip": "10.148.0.57",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/regions/asia-southeast1/subnetworks/default",
                "subnetwork_project": "my-project-butkem"
              }
            ],
            "project": "my-project-butkem",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/zones/asia-southeast1-b/instances/gateway",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh"
            ],
            "tags_fingerprint": "SFX9LNAOdG8=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "jenkins_sonarcube",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240830",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/zones/asia-southeast1-b/disks/jenkins-sonarcube"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/my-project-butkem/zones/asia-southeast1-b/instances/jenkins-sonarcube",
            "instance_id": "5233778756962527578",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "imron:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCJzji2yZfXI/Ejqj0LElzTlKYeRMY7eSVzOyEIAZoUG5RaKckPMZhMEAOCzsNNprXzXDdVUt+PJDToUplpMwtWJvwNmAIRgCdbayiZsXyxt3EfL7R6n0fBBnVtFsJjJIzB+dseul6x8ynq3cduy0pAb8Gj2zqMIlyEv6kqP95f/d/h//oyr/4oIgeXphWc7x7L42znrFdv7XS+wjmulFP/Omf1YGqNk+M3n+Pgop3AZgyieRb45iCObeuONtNr5hHlCdPflIXOtc7hbogx597GBostZaHHxxBPw7O+SUd5XLpKhwj4fStCmNhAZsst/zccSROGUkjeoF5q/hJb2TMNxRDFhbNfihxLH6zB6UtO3PNDcuw7mAw3tL3A6tdpNYJYgbvy4QKcSmZCMIS6ks34sJjdkKZpcociJCV35BZLX3J [...]
            },
            "metadata_fingerprint": "dptBASr5J0U=",
            "name": "jenkins-sonarcube",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.142.189.172",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/global/networks/default",
                "network_ip": "10.148.0.56",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/regions/asia-southeast1/subnetworks/default",
                "subnetwork_project": "my-project-butkem"
              }
            ],
            "project": "my-project-butkem",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/zones/asia-southeast1-b/instances/jenkins-sonarcube",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-all"
            ],
            "tags_fingerprint": "DYx7eH_2KNQ=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k3s_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240830",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/zones/asia-east1-a/disks/k3s-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/my-project-butkem/zones/asia-east1-a/instances/k3s-master",
            "instance_id": "1055850784362375515",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "imron:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCJzji2yZfXI/Ejqj0LElzTlKYeRMY7eSVzOyEIAZoUG5RaKckPMZhMEAOCzsNNprXzXDdVUt+PJDToUplpMwtWJvwNmAIRgCdbayiZsXyxt3EfL7R6n0fBBnVtFsJjJIzB+dseul6x8ynq3cduy0pAb8Gj2zqMIlyEv6kqP95f/d/h//oyr/4oIgeXphWc7x7L42znrFdv7XS+wjmulFP/Omf1YGqNk+M3n+Pgop3AZgyieRb45iCObeuONtNr5hHlCdPflIXOtc7hbogx597GBostZaHHxxBPw7O+SUd5XLpKhwj4fStCmNhAZsst/zccSROGUkjeoF5q/hJb2TMNxRDFhbNfihxLH6zB6UtO3PNDcuw7mAw3tL3A6tdpNYJYgbvy4QKcSmZCMIS6ks34sJjdkKZpcociJCV35BZLX3J [...]
            },
            "metadata_fingerprint": "dptBASr5J0U=",
            "name": "k3s-master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.80.96.149",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/global/networks/default",
                "network_ip": "10.140.0.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/regions/asia-east1/subnetworks/default",
                "subnetwork_project": "my-project-butkem"
              }
            ],
            "project": "my-project-butkem",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/zones/asia-east1-a/instances/k3s-master",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-all"
            ],
            "tags_fingerprint": "DYx7eH_2KNQ=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-east1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k3s_worker_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240830",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/zones/asia-east1-b/disks/k3s-worker-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/my-project-butkem/zones/asia-east1-b/instances/k3s-worker-1",
            "instance_id": "2564104940641102171",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "imron:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCJzji2yZfXI/Ejqj0LElzTlKYeRMY7eSVzOyEIAZoUG5RaKckPMZhMEAOCzsNNprXzXDdVUt+PJDToUplpMwtWJvwNmAIRgCdbayiZsXyxt3EfL7R6n0fBBnVtFsJjJIzB+dseul6x8ynq3cduy0pAb8Gj2zqMIlyEv6kqP95f/d/h//oyr/4oIgeXphWc7x7L42znrFdv7XS+wjmulFP/Omf1YGqNk+M3n+Pgop3AZgyieRb45iCObeuONtNr5hHlCdPflIXOtc7hbogx597GBostZaHHxxBPw7O+SUd5XLpKhwj4fStCmNhAZsst/zccSROGUkjeoF5q/hJb2TMNxRDFhbNfihxLH6zB6UtO3PNDcuw7mAw3tL3A6tdpNYJYgbvy4QKcSmZCMIS6ks34sJjdkKZpcociJCV35BZLX3J [...]
            },
            "metadata_fingerprint": "dptBASr5J0U=",
            "name": "k3s-worker-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.221.133.32",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/global/networks/default",
                "network_ip": "10.140.0.11",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/regions/asia-east1/subnetworks/default",
                "subnetwork_project": "my-project-butkem"
              }
            ],
            "project": "my-project-butkem",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/zones/asia-east1-b/instances/k3s-worker-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-all"
            ],
            "tags_fingerprint": "DYx7eH_2KNQ=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-east1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k3s_worker_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240830",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/zones/asia-east1-b/disks/k3s-worker-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/my-project-butkem/zones/asia-east1-b/instances/k3s-worker-2",
            "instance_id": "2452304004168591706",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "imron:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCJzji2yZfXI/Ejqj0LElzTlKYeRMY7eSVzOyEIAZoUG5RaKckPMZhMEAOCzsNNprXzXDdVUt+PJDToUplpMwtWJvwNmAIRgCdbayiZsXyxt3EfL7R6n0fBBnVtFsJjJIzB+dseul6x8ynq3cduy0pAb8Gj2zqMIlyEv6kqP95f/d/h//oyr/4oIgeXphWc7x7L42znrFdv7XS+wjmulFP/Omf1YGqNk+M3n+Pgop3AZgyieRb45iCObeuONtNr5hHlCdPflIXOtc7hbogx597GBostZaHHxxBPw7O+SUd5XLpKhwj4fStCmNhAZsst/zccSROGUkjeoF5q/hJb2TMNxRDFhbNfihxLH6zB6UtO3PNDcuw7mAw3tL3A6tdpNYJYgbvy4QKcSmZCMIS6ks34sJjdkKZpcociJCV35BZLX3J [...]
            },
            "metadata_fingerprint": "dptBASr5J0U=",
            "name": "k3s-worker-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.199.233.130",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/global/networks/default",
                "network_ip": "10.140.0.12",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/regions/asia-east1/subnetworks/default",
                "subnetwork_project": "my-project-butkem"
              }
            ],
            "project": "my-project-butkem",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/zones/asia-east1-b/instances/k3s-worker-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-all"
            ],
            "tags_fingerprint": "DYx7eH_2KNQ=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-east1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240830",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/zones/asia-southeast2-a/disks/monitoring-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/my-project-butkem/zones/asia-southeast2-a/instances/monitoring-server",
            "instance_id": "2147767561339316569",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "imron:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCJzji2yZfXI/Ejqj0LElzTlKYeRMY7eSVzOyEIAZoUG5RaKckPMZhMEAOCzsNNprXzXDdVUt+PJDToUplpMwtWJvwNmAIRgCdbayiZsXyxt3EfL7R6n0fBBnVtFsJjJIzB+dseul6x8ynq3cduy0pAb8Gj2zqMIlyEv6kqP95f/d/h//oyr/4oIgeXphWc7x7L42znrFdv7XS+wjmulFP/Omf1YGqNk+M3n+Pgop3AZgyieRb45iCObeuONtNr5hHlCdPflIXOtc7hbogx597GBostZaHHxxBPw7O+SUd5XLpKhwj4fStCmNhAZsst/zccSROGUkjeoF5q/hJb2TMNxRDFhbNfihxLH6zB6UtO3PNDcuw7mAw3tL3A6tdpNYJYgbvy4QKcSmZCMIS6ks34sJjdkKZpcociJCV35BZLX3J [...]
            },
            "metadata_fingerprint": "dptBASr5J0U=",
            "name": "monitoring-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.101.163.41",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/global/networks/default",
                "network_ip": "10.184.0.21",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/regions/asia-southeast2/subnetworks/default",
                "subnetwork_project": "my-project-butkem"
              }
            ],
            "project": "my-project-butkem",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/zones/asia-southeast2-a/instances/monitoring-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-all"
            ],
            "tags_fingerprint": "DYx7eH_2KNQ=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "nginx_webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240830",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/zones/asia-southeast2-a/disks/nginx-webserver"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/my-project-butkem/zones/asia-southeast2-a/instances/nginx-webserver",
            "instance_id": "1605317194764036441",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "imron:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCJzji2yZfXI/Ejqj0LElzTlKYeRMY7eSVzOyEIAZoUG5RaKckPMZhMEAOCzsNNprXzXDdVUt+PJDToUplpMwtWJvwNmAIRgCdbayiZsXyxt3EfL7R6n0fBBnVtFsJjJIzB+dseul6x8ynq3cduy0pAb8Gj2zqMIlyEv6kqP95f/d/h//oyr/4oIgeXphWc7x7L42znrFdv7XS+wjmulFP/Omf1YGqNk+M3n+Pgop3AZgyieRb45iCObeuONtNr5hHlCdPflIXOtc7hbogx597GBostZaHHxxBPw7O+SUd5XLpKhwj4fStCmNhAZsst/zccSROGUkjeoF5q/hJb2TMNxRDFhbNfihxLH6zB6UtO3PNDcuw7mAw3tL3A6tdpNYJYgbvy4QKcSmZCMIS6ks34sJjdkKZpcociJCV35BZLX3J [...]
            },
            "metadata_fingerprint": "dptBASr5J0U=",
            "name": "nginx-webserver",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.101.194.195",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/global/networks/default",
                "network_ip": "10.184.0.22",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/regions/asia-southeast2/subnetworks/default",
                "subnetwork_project": "my-project-butkem"
              }
            ],
            "project": "my-project-butkem",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-butkem/zones/asia-southeast2-a/instances/nginx-webserver",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-http"
            ],
            "tags_fingerprint": "6cm263NBGlo=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    }
  ]
}